--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -34,17 +34,32 @@
       width: 70px;
       max-height: 40px;
     }
+    .game {
+      margin-top: 3%;
+
+      &__solved {
+        color: #D2D7DF;
+        font-size: 50px;
+      }
+
+      &__rules {
+        color: #D2D7DF;
+        margin: 20px;
+        max-width: 420px;
+      }
+
+      &__quote {
+        min-width: 400px ;
+        min-height: 80px;
+        font-size: 12px ;
+        color:#D2D7DF;
+      }
+
+
+    }
+
   }
 
-  &__solved {
-    color: #D2D7DF;
-    font-size: 50px;
-  }
 
-  &__rules {
-    color: #D2D7DF;
-    margin: 20px;
-    max-width: 420px;
-  }
 }
 
