--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -4,9 +4,6 @@
   flex-direction: column;
   margin-top: 10%;
 
-  &__title {
-    color: #D2D7DF;
-  }
 
   &__quote {
     min-width: 400px ;
@@ -29,6 +26,19 @@
     text-align: center;
   }
 
+  &__solved {
+    color: #D2D7DF;
+    max-width: 420px ;
+    min-height: 120px;
+    font-size: 20px;
+  }
+
+  &__rules {
+    color: #D2D7DF;
+    margin: 20px;
+    max-width: 420px;
+  }
+
   @media (max-width: 500px) {
     .button {
       width: 70px;
@@ -37,22 +47,20 @@
     .game {
       margin-top: 3%;
 
-      &__solved {
-        color: #D2D7DF;
-        font-size: 50px;
-      }
 
-      &__rules {
-        color: #D2D7DF;
-        margin: 20px;
-        max-width: 420px;
-      }
 
       &__quote {
         min-width: 400px ;
         min-height: 80px;
         font-size: 12px ;
         color:#D2D7DF;
+      }
+
+      &__solved {
+        color: #D2D7DF;
+        max-width: 350px ;
+        min-height: 80px;
+        font-size: 18px;
       }
 
 
