--- a/src/components/Tile/Tile.module.scss
+++ b/src/components/Tile/Tile.module.scss
@@ -10,6 +10,7 @@
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  margin: auto;
 }
 
 .tile:hover {
